--- a/AliEMASBinding/AliEMAS.Binding.Droid/AliEMAS.Binding.Droid.csproj
+++ b/AliEMASBinding/AliEMAS.Binding.Droid/AliEMAS.Binding.Droid.csproj
@@ -41,17 +41,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Additions\PushApplication.cs" />
+    <Compile Include="Additions\PushSDKRequired.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Additions\AboutAdditions.txt" />
     <LibraryProjectZip Include="Jars\alicloud-android-push-3.1.4.aar">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </LibraryProjectZip>
-    <None Include="jniLibs\.DS_Store" />
-    <EmbeddedNativeLibrary Include="jniLibs\armeabi-v7a\libMotu.so" />
-    <EmbeddedNativeLibrary Include="jniLibs\armeabi\libMotu.so" />
-    <EmbeddedNativeLibrary Include="jniLibs\x86\libMotu.so" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
@@ -63,6 +60,9 @@
     <EmbeddedJar Include="Jars\alicloud-android-ut-5.4.0.jar" />
     <EmbeddedJar Include="Jars\alicloud-android-utils-1.1.3.jar" />
     <EmbeddedJar Include="Jars\utdid4all-1.1.5.3_proguard.jar" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="jniLibs\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
