--- a/AliEMASBinding/AliEMAS.Binding.Droid/AliEMAS.Binding.Droid.csproj
+++ b/AliEMASBinding/AliEMAS.Binding.Droid/AliEMAS.Binding.Droid.csproj
@@ -46,9 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\alicloud-android-push-3.1.4.aar">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </LibraryProjectZip>
+    <LibraryProjectZip Include="Jars\alicloud-android-push-3.1.4.aar" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
@@ -61,8 +59,14 @@
     <EmbeddedJar Include="Jars\alicloud-android-utils-1.1.3.jar" />
     <EmbeddedJar Include="Jars\utdid4all-1.1.5.3_proguard.jar" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="jniLibs\" />
+    <LibraryProjectZip Include="Jars\alicloud-android-man-1.2.4.aar" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedNativeLibrary Include="jniLibs\armeabi-v7a\libMotu.so" />
+    <EmbeddedNativeLibrary Include="jniLibs\armeabi\libMotu.so" />
+    <EmbeddedNativeLibrary Include="jniLibs\x86\libMotu.so" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
