--- a/AliEMASTest/AliEMASTest/AliEMASTest.iOS/AliEMASTest.iOS.csproj
+++ b/AliEMASTest/AliEMASTest/AliEMASTest.iOS/AliEMASTest.iOS.csproj
@@ -142,6 +142,9 @@
     </ImageAsset>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="AliEMAS.Binding.iOS">
+      <HintPath>..\..\..\AliEMASBinding\AliEMAS.Binding.iOS\bin\Debug\AliEMAS.Binding.iOS.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
