--- a/AliEMASBinding/AliEMAS.Droid/AliEMAS.Droid.csproj
+++ b/AliEMASBinding/AliEMAS.Droid/AliEMAS.Droid.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service.cs" />
+    <Compile Include="DroidServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Android.Support.Core.UI">
