--- a/AliEMASTest/AliEMASTest/AliEMASTest.iOS/AliEMASTest.iOS.csproj
+++ b/AliEMASTest/AliEMASTest/AliEMASTest.iOS/AliEMASTest.iOS.csproj
@@ -156,6 +156,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\..\..\AliEMASBinding\AliEMAS.iOS\AliEMAS.iOS.csproj">
+      <Project>{e71f3053-056c-4381-9638-048ed73bdff6}</Project>
+      <Name>AliEMAS.iOS</Name>
+      <IsAppExtension>false</IsAppExtension>
+      <IsWatchApp>false</IsWatchApp>
+    </ProjectReference>
     <ProjectReference Include="..\AliEMASTest\AliEMASTest.csproj">
       <Project>{7187F6A0-364C-4B7D-97DD-8380BB482C3E}</Project>
       <Name>AliEMASTest</Name>
