--- a/AliEMASTest/AliEMASTest/AliEMASTest/AliEMASTest.csproj
+++ b/AliEMASTest/AliEMASTest/AliEMASTest/AliEMASTest.csproj
@@ -12,4 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\AliEMASBinding\AliEMAS\AliEMAS.csproj" />
+  </ItemGroup>
 </Project>
