--- a/AliEMASBinding/AliEMAS.Binding.Droid/AliEMAS.Binding.Droid.csproj
+++ b/AliEMASBinding/AliEMAS.Binding.Droid/AliEMAS.Binding.Droid.csproj
@@ -68,6 +68,9 @@
   <ItemGroup>
     <EmbeddedJar Include="Jars\alicloud-android-ut-5.4.0.jar" />
   </ItemGroup>
+  <ItemGroup>
+    <LibraryProjectZip Include="Jars\alicloud-android-third-push-3.0.5.aar" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
