--- a/AliEMASBinding/AliEMAS.iOS/AliEMAS.iOS.csproj
+++ b/AliEMASBinding/AliEMAS.iOS/AliEMAS.iOS.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AliEMAS.Binding.iOS">
-      <HintPath>..\AliEMAS.Binding.iOS\bin\Debug\AliEMAS.Binding.iOS.dll</HintPath>
+      <HintPath>..\AliEMAS.Binding.iOS\bin\Release\AliEMAS.Binding.iOS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
